k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maffia-game-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pmqxyz.hopto.org
      secretName: my-tls-secret
  rules:
    - host: pmqxyz.hopto.org
      http:
        paths:
          - path: /maffia
            pathType: Prefix
            backend:
              service:
                name: maffia-game-service
                port:
                  number: 8098
